--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BuscadorDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "SecuritySettings": {
+    "SecretKey": "9999"
   }
 }
